# HeteroLink

./: .gitignore  .gitmodules  AUTHORS.adoc  AUTHORS.md  CHANGELOG.adoc  CHANGELOG.md  CODE_OF_CONDUCT.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  LICENSE  MAINTAINERS.adoc  MAINTAINERS.md  README.adoc  README.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PLAN.md  SECURITY.adoc  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cd.yml  ci.yml  release.yml
dashboard/: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  DESIGN_SUMMARY.adoc  DESIGN_SUMMARY.md  MQTT_IMPLEMENTATION.adoc  MQTT_IMPLEMENTATION.md  README.adoc  README.md  vcpkg.json
dashboard/examples/: mqtt_test.cpp
dashboard/resources/: resources.qrc
dashboard/resources/icons/: README.adoc  README.md
dashboard/src/: main.cpp
dashboard/src/app/: Application.h
dashboard/src/core/: AlarmSystem.h  DataProcessor.cpp  DeviceManager.cpp  DeviceManager.h
dashboard/src/protocol/: MqttChannel.h  Protocol.cpp  Protocol.h  UartChannel.cpp  UartChannel.h
dashboard/src/storage/: ConfigManager.cpp  DataLogger.cpp  DataLogger.h
dashboard/src/ui/: AddDeviceDialog.cpp  AddDeviceDialog.h  ConfigPanel.h  DataWidget.cpp  DataWidget.ui  DevicePanel.cpp  DevicePanel.h  DevicePanel.ui  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h
dashboard/src/utils/: Logger.cpp  Logger.h
dashboard/tests/: CMakeLists.txt  TEST_RESULTS.md  test_alarmsystem.cpp  test_application.cpp  test_configmanager.cpp  test_datalogger.cpp  test_dataprocessor.cpp  test_devicemanager.cpp  test_gui_scaffold.cpp  test_helpers.cpp  test_mqttchannel.cpp  test_protocol.cpp  test_uartchannel.cpp
dashboard/tests/data/: README.md  protocol_frames.json  telemetry_samples.json
dashboard/tests/helpers/: TestHelpers.h
dashboard/tests/mocks/: CMakeLists.txt  MockDeviceManager.cpp  MockDeviceManager.h  MockMqttChannel.cpp  MockMqttChannel.h  MockUartChannel.cpp  MockUartChannel.h  test_mocks.cpp
docs/: README.adoc  README.md
docs/dashboard/: host-design.adoc  mqtt-guide.adoc  protocol-spec.adoc
docs/firmware/: architecture.adoc  architecture.md  configuration.adoc  configuration.md  index.md
docs/getting-started/: index.adoc  index.md  installation.adoc  installation.md  quick-start.adoc  quick-start.md  troubleshooting.adoc  troubleshooting.md
docs/hardware/: README.adoc  README.md  compatibility.adoc  compatibility.md  index.adoc  index.md
docs/software/: host-design.adoc  host-design.md  mqtt-guide.adoc  mqtt-guide.md  protocol-spec.adoc  protocol-spec.md
docs/unit/: architecture.adoc  configuration.adoc  index.adoc  index.md  (+1 more)
examples/: README.adoc  README.md
scripts/: eim_config.toml  esp-usb  install-esp-idf.sh
software/host/: .gitignore  BUILD_GUIDE.md  BUILD_GUIDE_WINDOWS.md  BUILD_VCPKG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cargo.toml  DESIGN_SUMMARY.md  MQTT_IMPLEMENTATION.md  README.md  VCPKG_BUILD.md  build.rs  test_uart_rx.py  vcpkg.json
software/host/examples/: CMakeLists.txt  mqtt_test.cpp
software/host/resources/: resources.qrc
software/host/resources/icons/: README.md
software/host/resources/styles/: dark.qss
software/host/slint/: app.slint
software/host/src/: main.cpp  main.rs
software/host/src/api/: broadcast.rs  dto.rs  mod.rs  routes.rs  state.rs  ws.rs
software/host/src/api/handlers/: alarm.rs  command.rs  config.rs  device.rs  export.rs  mod.rs  mqtt.rs  recording.rs  update.rs
software/host/src/app/: Application.cpp  builder.rs
software/host/src/core/: AlarmSystem.cpp  AlarmSystem.h  DataProcessor.cpp  DataProcessor.h  DeviceManager.cpp  DeviceManager.h  alarm_system.rs  data_processor.rs  device_manager.rs  mod.rs
software/host/src/domain/: alarm.rs  config.rs  device.rs  error.rs  mod.rs  stats.rs  telemetry.rs
software/host/src/events/: domain_event.rs  mod.rs
software/host/src/infra/: event_bus.rs  mod.rs  time_util.rs
software/host/src/protocol/: MqttChannel.cpp  MqttChannel.h  UartChannel.cpp  frame.rs  mod.rs  mqtt.rs  uart.rs
software/host/src/services/: alarm_service.rs  command_service.rs  config_service.rs  device_service.rs  export_service.rs  mod.rs  mqtt_service.rs  recording_service.rs  telemetry_service.rs  updater_service.rs
software/host/src/sim/: mock_responses.rs  mod.rs  simulation.rs
software/host/src/storage/: ConfigManager.h  DataLogger.cpp  DataLogger.h  config.rs  data_logger.rs  mod.rs
software/host/src/ui/: ConfigPanel.cpp  ConfigPanel.h  ConfigPanel.ui  DataWidget.cpp  DataWidget.h  DevicePanel.cpp  DevicePanel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  bridge.rs  mod.rs
software/host/src/utils/: Logger.cpp  Logger.h
software/host/src/workers/: device_events.rs  mod.rs  mqtt_events.rs
software/host/tests/: CMakeLists.txt  mqtt_test.rs
software/host/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
software/host/web/src/: App.vue  main.ts
software/host/web/src/api/: alarm.ts  command.ts  config.ts  device.ts  export.ts  index.ts  mqtt.ts  recording.ts
software/host/web/src/assets/styles/: global.scss  variables.scss
software/host/web/src/components/config/: AlarmConfigPanel.vue  GeneralConfigPanel.vue  MqttConfigPanel.vue
software/host/web/src/components/data/: AlarmPanel.vue  DeviceControlPanel.vue  LogPanel.vue  RealtimeDataTable.vue  StatsPanel.vue  WaveformChart.vue
software/host/web/src/components/device/: DeviceListPanel.vue
software/host/web/src/components/status/: StatusBar.vue
software/host/web/src/components/toolbar/: AppToolbar.vue
software/host/web/src/composables/: useWebSocket.ts
software/host/web/src/router/: index.ts
software/host/web/src/stores/: alarmStore.ts  appStore.ts  configStore.ts  deviceStore.ts  index.ts  logStore.ts  telemetryStore.ts
software/host/web/src/types/: index.ts
software/host/web/src/views/: MainLayout.vue
unit/: .gitignore  CMakeLists.txt  README.adoc  README.md  build_and_flash.sh  partitions.csv  sdkconfig.defaults
(+39 files in other folders)
