[package]
name = "heterolink-host"
version = "0.2.0"
edition = "2021"
authors = ["HeteroLink Project"]
description = "HeteroLink 上位机 - 异构协处理器监控平台 (Web Backend)"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1.37", features = ["full", "sync", "rt-multi-thread"] }
futures = "0.3"

# MQTT
rumqttc = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CSV export
csv = "1.3"

# Async channels
async-channel = "2.3"

# Config paths
dirs = "5.0"

# UUID generation
uuid = { version = "1.8", features = ["v4"] }
